--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,20 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "extends": "eslint:recommended",
-    "env": {
-      "es6": true,
-      "browser": true,
-      "jquery": true
+"parserOptions": {
+  "ecmaVersion": 6,
+  "sourceType": "module"
+  },
+  "extends": "eslint:recommended",
+  "env": {
+    "es6": true,
+    "browser": true,
+    "jquery": true,
+    "node": true,
+    "jasmine": true
     },
     "rules": {
-        "semi": 1,
+      "semi": 1,
       "indent": ["warn", 2],
       "no-console": "warn",
       "no-debugger": "warn"
     }
-}
+  }
